# Malicious-traffic-detection

./: .gitignore  README.md  header_analysis.py  pcap2flow.py  preprocess_data.py  preprocessor.py  pyproject.toml  retrain.py  train.py  training.py
configs/: default.py
models/development/v1/binary/xgboost_20241210_155649/: metadata.json
models/development/v1/binary/xgboost_20241210_155649_v1/: model.json  report.txt
models/development/v1/multiclass/xgboost_20241210_155649/: metadata.json  report.txt
models/development/v1/multiclass/xgboost_20241210_155649_v1/: model.json
models/development/v1/multiclass/xgboost_20241210_155649_v2/: metadata.json  model.json  report.txt
models/development/xgboost_binary_20241223_203740_v1/metrics/: metadata.json  report.txt
models/development/xgboost_binary_20241223_203740_v1/model/: model.json
mtd/: __main__.py
mtd/app/: cli.py  processor.py
mtd/data/: preprocessor.py
mtd/data/detections/: sigma.py  xgboost.py
mtd/data/enrichment/: geoip.py  greynoise.py
mtd/models/: retrainer.py  trainer.py
mtd/utils/: config.py  metadata.py  visualization.py
notebooks/: ctu_13_analysis.ipynb  hyperparameter_optimization.ipynb
scripts/: pcap2flow.py  preprocess_data.py  retrain.py  train.py
src/: __main__.py
src/app/: cli.py  plugins.py  processor.py
src/data/: feature_processor.py  header_analysis.py  preprocessor.py
src/data/detections/: sigma.py
src/data/enrichment/: geoip.py  greynoise.py
src/models/: retrainer.py  trainer.py
src/utils/: config.py  constants.py  report.py  visualization.py
