[project]
name = "Malicious-traffic-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "xgboost>=2.1.3",
    "nfstream>=6.5.3",
    "psutil>=6.1.0",
    "dask>=2024.12.1",
    "graphviz>=0.20.3",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "click>=8.1.7",
    "rich>=13.9.4",
    "greynoise>=2.3.0",
    "spyip>=0.3.0",
    "pydantic-typer>=0.0.13",
    "rich-dataframe2>=0.2.1",
    "pysigma>=0.11.18",
    "pysigma-backend-pd-df>=0.3.0",
    "plotext>=5.3.2",
    "sortedcontainers>=2.4.0",
    "folium>=0.19.3",
    "requests>=2.32.3",
]
